--- a/index.html
+++ b/index.html
@@ -3,40 +3,89 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pytanie Walentynkowe</title>
+<title>Walentynki</title>
+
 <style>
+    * { box-sizing: border-box; }
+
     body {
-        background-color: black;
-        color: white;
-        font-family: Arial, sans-serif;
+        min-height: 100vh;
+        margin: 0;
+        font-family: 'Inter', Arial, sans-serif;
+        background: radial-gradient(circle at top, #2b2147, #000);
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        margin: 0;
+        color: #fff;
+        overflow: hidden;
     }
-    h1 {
-        color: #B19CD9; /* fioletowy akcent */
+
+    .card {
+        background: rgba(255, 255, 255, 0.08);
+        border-radius: 24px;
+        padding: 48px 40px;
         text-align: center;
+        backdrop-filter: blur(14px);
+        box-shadow: 0 20px 60px rgba(0,0,0,0.5);
+        animation: fadeIn 1s ease;
     }
-    .button {
-        padding: 15px 30px;
-        margin: 20px;
-        font-size: 18px;
-        font-weight: bold;
-        border: 2px solid #B19CD9;
-        background-color: black;
-        color: #B19CD9;
+
+    h1 {
+        color: #d6c7ff;
+        font-size: 2.2rem;
+        margin-bottom: 36px;
+    }
+
+    .buttons {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    button {
+        padding: 14px 32px;
+        font-size: 1rem;
+        border-radius: 999px;
+        border: 2px solid #bfaaff;
+        background: transparent;
+        color: #bfaaff;
         cursor: pointer;
+        transition: all 0.3s ease;
+    }
+
+    button:hover {
+        background: #bfaaff;
+        color: #000;
+        transform: translateY(-2px);
+    }
+
+    #noButton {
         position: relative;
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+            transform: translateY(20px) scale(0.98);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0) scale(1);
+        }
     }
 </style>
 </head>
+
 <body>
-<h1>Czy zostaniesz moją Walentynką?</h1>
-<button class="button" id="yesButton" onclick="goToCongrats()">Tak</button>
-<button class="button" id="noButton">Nie</button>
+<div class="card">
+    <h1>Czy zostaniesz moją Walentynką? 💜</h1>
+
+    <div class="buttons">
+        <button onclick="goToCongrats()">Tak</button>
+        <button id="noButton">Nie</button>
+    </div>
+</div>
 
 <script>
 const noButton = document.getElementById('noButton');
@@ -44,7 +93,7 @@ const noButton = document.getElementById('noButton');
 noButton.addEventListener('mouseenter', () => {
     const x = Math.random() * (window.innerWidth - noButton.offsetWidth);
     const y = Math.random() * (window.innerHeight - noButton.offsetHeight);
-    noButton.style.position = 'absolute';
+    noButton.style.position = 'fixed';
     noButton.style.left = x + 'px';
     noButton.style.top = y + 'px';
 });
