--- a/congrats.html
+++ b/congrats.html
@@ -3,80 +3,61 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<meta http-equiv="refresh" content="10;url=index.html">
-
 <title>Gratulacje</title>
 
 <style>
-    * { box-sizing: border-box; }
+* { box-sizing: border-box; }
 
-    body {
-        min-height: 100vh;
-        margin: 0;
-        font-family: 'Inter', Arial, sans-serif;
-        background: radial-gradient(circle at top, #2b2147, #000);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #fff;
-        overflow: hidden;
-    }
+body {
+    min-height: 100vh;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: radial-gradient(circle at top, #2b2147, #000);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
 
-    .card {
-        background: rgba(255, 255, 255, 0.08);
-        border-radius: 24px;
-        padding: 48px 40px;
-        text-align: center;
-        backdrop-filter: blur(14px);
-        box-shadow: 0 20px 60px rgba(0,0,0,0.5);
-        animation: fadeIn 1.2s ease;
-    }
+.card {
+    background: rgba(255,255,255,0.08);
+    backdrop-filter: blur(14px);
+    border-radius: 24px;
+    padding: 48px 40px;
+    text-align: center;
+    box-shadow: 0 20px 60px rgba(0,0,0,0.5);
+}
 
-    h1 {
-        color: #d6c7ff;
-        font-size: 2.4rem;
-        margin-bottom: 20px;
-    }
+h1 {
+    color: #d6c7ff;
+    margin-bottom: 20px;
+}
 
-    .hearts {
-        font-size: 3rem;
-        animation: float 2s ease-in-out infinite alternate;
-    }
+.hearts {
+    font-size: 3rem;
+    animation: float 2s infinite alternate;
+}
 
-    .sub {
-        opacity: 0.6;
-        margin-top: 28px;
-        font-size: 0.9rem;
-    }
-
-    @keyframes float {
-        from { transform: translateY(0); }
-        to   { transform: translateY(-20px); }
-    }
-
-    @keyframes fadeIn {
-        from {
-            opacity: 0;
-            transform: translateY(20px) scale(0.98);
-        }
-        to {
-            opacity: 1;
-            transform: translateY(0) scale(1);
-        }
-    }
+@keyframes float {
+    from { transform: translateY(0); }
+    to   { transform: translateY(-20px); }
+}
 </style>
 </head>
 
 <body>
 <div class="card">
     <h1>Gratulacje 💜</h1>
-    <div>zostałaś moją Walentynką</div>
+    <div>Zostałaś moją Walentynką</div>
     <div class="hearts">❤️ 💜 ❤️ 💜 ❤️</div>
-    <div class="sub">wracamy za chwilę…</div>
 </div>
-</body>
-</html>
 
+<script>
+setTimeout(() => {
+    window.location.href = "index.html";
+}, 10000);
+</script>
+
+</body>
 </html>
 
