--- a/congrats.html
+++ b/congrats.html
@@ -83,7 +83,7 @@ h1 {
 <body>
 
 <div class="card">
-    <h1>Gratulacje 💜</h1>
+    <h1>😘 Gratulacje 😘</h1>
     <div class="subtitle">Zostałaś moją Walentynką</div>
     <div class="hearts">💜 💜 💜</div>
 </div>
@@ -116,4 +116,5 @@ setInterval(createHeart, 400);
 
 </body>
 </html>
+
 
